Fix dashboard grid on IE

--- a/mon-pix/app/styles/components/_new-information.scss
+++ b/mon-pix/app/styles/components/_new-information.scss
@@ -66,7 +66,6 @@
 
   &__img {
     display: block;
-    height: 100%;
     margin: 12px 48px 12px 30px;
   }
 
